--- a/css/tiles.css
+++ b/css/tiles.css
@@ -1,21 +1,13 @@
-.blacktile {
+.tile {
     width: 100px;
     height: 100px;
     padding: 0px 0px 0px 0px;
     display:inline-block;
-    background-color: darkgrey;
 }
-.blacktile:hover { 
+.tile:hover { 
     background-color: lightblue;
 }
-
-.whitetile {
-    width: 100px;
-    height: 100px;
-    padding: 0px 0px 0px 0px;
-    display:inline-block;
-    background-color: white;
-}
-.whitetile:hover { 
-    background-color: lightblue;
-}
+.black { background-color: darkgrey; }
+.white { background-color: floralwhite; }
+.target { box-shadow:0px 0px 0px 3px gold inset; }
+.hint { box-shadow:0px 0px 0px 3px lightgreen inset; }
