added css for an outer board element & renamed the css to that level

--- a/css/board.css
+++ b/css/board.css
@@ -1,3 +1,9 @@
+#board {
+	border-style: solid;
+	border-color: black;
+	border-width: 2px;
+    display:inline-block;
+}
 .tile {
     width: 100px;
     height: 100px;
