--- a/css/board.css
+++ b/css/board.css
@@ -16,21 +16,12 @@
 	width: 10vw;
 	height: 40vw;
 }
-.tile {
-	width: auto;
-	height: auto;
-/* 	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-o-user-select: none;
-	user-select: none;
- */}
 .interactive:hover { background-color: lightblue; }
 .black { background-color: darkgrey; }
 .white { background-color: floralwhite; }
 .target { box-shadow:0px 0px 0px 3px gold inset; }
 .hint { box-shadow:0px 0px 0px 3px lightgreen inset; }
 .piece {
-	max-width: 100%;
-	max-height: 100%;
+	width: 100%;
+	height: 100%;
 };
