--- a/css/menu.css
+++ b/css/menu.css
@@ -3,25 +3,20 @@ body {
 }
 .grid-container {
 	display: inline-grid;
-	grid-template-columns: auto auto auto;
 	grid-template-rows: auto auto;
 }
 .menu {
 	height: 15vmin;
-	grid-column-start: 1;
-	grid-column-end: 3;
 	grid-row-start: 1;
 	background-color: #F2855E;
 	text-align: center;
 	color: #194769;
 }
 .content {
-	grid-column-start: 1;
-	grid-column-end: 3;
 	grid-row-start: 2;
 	/* background-color: #1D1918; */
 }
-.center-flex {
+.centered {
   /* align-items: left; */
   display: flex;
   justify-content: center;
